<resources>
    <string name="navigation_drawer_open" translatable="false">Open Navigation</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation</string>
    <string name="app_name">Clever</string>
    <string name="round_length">25</string>
    <string name="start_score">0</string>
    <string name="tour_label_text">Тур</string>
    <string name="question_label_text">Вопрос</string>
    <string name="network_error_message">Ошибка при загрузке данных</string>
    <string name="auth_error_message">Ошибка при авторизации</string>
    <string name="network_unavailbale_message">Сеть недоступна</string>
    <string name="try_again_message">Повторить</string>
    <string name="enter_title_text">Вход</string>
    <string name="offline">Игра Offline</string>
    <string name="online">Игра Online</string>
    <string name="players_number_label">Количество соперников:</string>
    <string name="players_min">1</string>
    <string name="players_max">5</string>
    <string name="create_game_title">Создать игру</string>
    <string name="start_game_title">Начать игру</string>
    <string name="bet_number_label">Размер ставки:</string>
    <string name="bet_min">1</string>
    <string name="bet_max">10</string>
    <string name="loading">Загрузка</string>
    <string name="answers">Ответы:</string>
    <string name="from">из</string>
    <string name="results_title_game">Результат игры</string>
    <string name="results_title_round">Результат тура</string>
    <string name="finish_round">Следующий тур</string>
    <string name="exit">Завершить игру</string>
    <string name="no_questions">Необходимо обновить список вопросов. Проверьте подключение к сети</string>
    <string name="your_place">Вы заняли</string>
    <string name="place">место</string>
    <string name="choose_avatar_prompt">Выберите аватар</string>
    <string name="name_enter_prompt">Введите новое имя</string>
    <string name="take">Получите</string>
    <string name="daily_bonus">Бонус за посещение</string>
    <string name="not_enough_coins">Недостаточно монет!</string>
    <string name="get_yesterday">Завтра вы сможете получить уже</string>
    <string name="play_every_day">Играйте каждый день!</string>
    <string name="support_head">Завтра мы вам подарим</string>
    <string name="are_you_registered">Вы ещё не зарегистрированы ?</string>
    <string name="register_action">Регистрация</string>
    <string name="email">Введите ваш E-mail</string>
    <string name="password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_pass">Забыли пароль ?</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="send_pass">Выслать новый пароль</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="login_title">Вход</string>
    <string name="restore">Восстановление пароля</string>
    <string name="vk_fail">Не удалось войти с помощью VK</string>
    <string name="facebook_fail">Не удалось войти с помощью facebook</string>
    <integer name="com_vk_sdk_AppId">5642338</integer>
    <string name="facebook_app_id">1205436472847362</string>
    <string name="fb_login_protocol_scheme">fb1205436472847362</string>
    <string name="restore_error">Ошибка при восстановлении пароля</string>
    <string name="play">Играть</string>
    <string name="auth_success">Авторизация прошла успешно!</string>
    <string name="invalid_input">Проверьте введённые данные!</string>
    <string name="log_out">Выход</string>
    <string name="connected">Подключено</string>
    <string name="room_title_default">Комната</string>
    <string name="unknown_error_message">Неизвестная ошибка. Попробуйте позже</string>
    <string name="nav_drawer_game">Игра</string>
    <string name="nav_drawer_stats">Рейтинг</string>
    <string name="nav_drawer_news">Новости</string>
    <string name="nav_drawer_rules">Помощь</string>
    <string name="nav_drawer_exit">Выйти</string>
    <string name="by_coins">По монетам</string>
    <string name="by_points">По очкам</string>
    <string name="_0">0</string>
    <string name="socket_error">Соединение с сервером разорвано</string>
    <string name="socket_connect_error">Не удалось установить соединение с сервером</string>
    <string name="room_creation_error">Не удалось создать комнату</string>
    <string name="confirm_exit">Покинуть комнату?</string>
    <string name="yes">Да</string>
    <string name="room_connection_success">Вы успешно подключились к комнате.</string>
    <string name="room_connection_fail">Не удалось подключиться к комнате</string>
    <string name="room_creation_success">Вы успешно создали комнату.</string>
    <string name="rooms_empty">Список комнат пуст</string>
    <string name="new_player">К комнате присоединился новый игрок.</string>
    <string name="player_left">Игрок отключился от комнаты.</string>
    <string name="connected_start">Подключилось</string>
    <string name="connected_end">из</string>
    <string name="in_lobby">Вы в лобби.</string>
    <string name="unauthorized">Проверьте подключение к сети либо немного подождите</string>
    <string name="not_enough_players">Недостаточно участников</string>
    <string name="connection_success">Соединение установлено</string>
    <string name="unstable_connection">Проблемы с соединением</string>
    <string name="share">Поделиться новостью</string>
    <string name="clever_news">Хорошая новость от Clever!</string>
    <string name="more">Подробнее</string>
    <string name="auth_failed">Не удалось авторизоваться</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
</resources>
