<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/enter_title_text"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/offline_game_btn"
            style="@style/ButtonStyle"
            android:text="@string/offline"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/online_game_btn"
            style="@style/ButtonStyle"
            android:text="@string/online"
            android:visibility="invisible"/>

    </LinearLayout>


</RelativeLayout>