<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="13"
        android:gravity="center"
        android:layout_below="@+id/toolbar">

        <EditText
            android:layout_weight="1"
            style="@style/InputStyle"
            android:hint="@string/email"
            android:id="@+id/email"
            android:maxLength="254"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_weight="1"
            style="@style/InputStyle"
            android:hint="@string/password"
            android:id="@+id/password"
            android:maxLength="50"
            android:inputType="textPassword"/>

        <EditText
            android:layout_weight="1"
            style="@style/InputStyle"
            android:hint="@string/password_repeat"
            android:id="@+id/password_repeat"
            android:maxLength="50"
            android:inputType="textPassword"/>

        <TextView
            android:layout_weight="1"
            style="@style/ButtonStyleAuth"
            android:text="@string/sign_up"
            android:id="@+id/input_button"/>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/social_image_size"
                android:layout_height="@dimen/social_image_size"
                app:srcCompat="@drawable/facebook"
                android:layout_marginRight="@dimen/social_divider"
                android:layout_marginEnd="@dimen/social_divider"
                android:id="@+id/facebook"/>

            <ImageView
                android:layout_width="@dimen/social_image_size"
                android:layout_height="@dimen/social_image_size"
                app:srcCompat="@drawable/vk"
                android:id="@+id/vk"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/transparent_loading"
        android:background="@color/round_fill"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</RelativeLayout>